--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -1,4 +1,19 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759388.md#1" target="_blank">新年前一天松原现3个“太阳” 网民热议</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759388.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/d--150x120.jpeg" align ="left"></a>新年前一天，即2019年12月31日，吉林省松原市扶余市的天上出现奇异天象，天空中现3个太阳。有人直呼“活了30年头一次见”，此事亦在微博上引发热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 1:46 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759400.md#1" target="_blank">2019岁末 民间记者会给港人的一封信</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759400.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1908190851422188-150x120.jpg" align ="left"></a>民间记者会是香港这场反送中运动没有大台的情况下，为了制衡政府虚假的记者会，民间自发建立的将民众声音向外宣扬的平台，于2019年8月6日开始第一次的民间记者会，重申示威者的五大诉求、要求调查警方滥用权力的行为及元朗袭击事件，到12月23日“逆权运动现生机 素人工会抗强权”，民间记者会共举办了29次记者会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 1:21 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759287.md#1" target="_blank">新年伊始港警射催泪弹 作家邓小桦眼角中弹</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759287.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/80784582_10156806344996592_3684122109266624512_n-150x120.jpg" align ="left"></a>刚踏入2020年，香港女作家邓小桦在旺角与友人倒数庆祝新年后，在登打士街行人路上，突然被警方发射的催泪弹打中左眼眼角，受伤流血。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 11:39 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748178.md#1" target="_blank">【直播回放】新唐人电视台2020跨年缤纷夜</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748178.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/6160c7b0d602315646131b856d7d61e8-150x120.jpg" align ="left"></a>新唐人电视台特别企划《2020跨年缤纷夜》直播节目，在2019年的最后一个夜晚，陪您盘点年度大事件，欢欢喜喜迎新年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 10:43 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759103.md#1" target="_blank">中共密码法上路 美参议员警告促企业勿配合</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759103.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/d5266b7d9f66567250154d1b354db98b-150x120.jpg" align ="left"></a>中共去年通过的密码法，定于今年1月1日生效。美国参议员表示，这项法规将使美国公司面临丢失敏感数据的风险，呼吁美国企业不要配合中共。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 9:57 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759107.md#1" target="_blank">【拍案惊奇】2020注定不平凡 9件事陪你跨年</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759107.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/tn1231-150x120.jpg" align ="left"></a>今天是美东时间2019年12月31日，星期二。这是2019年的最后一天，大家应该许一个愿望，为明年做一个规划。比如，如何做一个更好的自己。我的新年愿望之一，就是进一步完善我们这个《新闻拍案惊奇》。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 9:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11759016.md#1" target="_blank">海航董事长承认拖欠工资 资金困境未解</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11759016.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/1803202337372662-150x120.jpg" align ="left"></a>早在今年3月份就有媒体曝出海航拖欠员工工资数月，有航空服务人员发帖抗议。11月末海航旗下的香港航空员工收到内部邮件，被告知11月的工资将于12月6日发放。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 9:12 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758999.md#1" target="_blank">华为2019动荡不安 2020面临四大困境</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758999.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/gettyimages-1145445372-594x594-150x120.jpg" align ="left"></a>对于中国科技巨头华为公司来说，2019年是动荡不安的一年，然而，2020年恐怕更惨，至少有四个令其焦头烂额的问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 8:40 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11752263.md#1" target="_blank">【2019盘点】华人关注的十大新闻</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11752263.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019combo1-150x120.jpg" align ="left"></a>中国传统上的猪年 “诸事大吉”，不过2019猪年对于中共来说，确是举步艰难。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 8:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758887.md#1" target="_blank">2019大陆车企关键字：下滑、亏损、停产</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758887.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/39a423572cf61c56687990155c7257b3-150x120.jpg" align ="left"></a>大陆汽车企业今年进入寒冬，四大汽车集团（长安、东风、上汽、一汽）销量下滑、出售股份；中小型车企频频被曝停产、退出整车生产，甚至破产。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 7:11 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758900.md#1" target="_blank">山东偷排污水管深埋入海口 污染令人震惊</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758900.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/325ce0f93814dea0342ffc85f4b78a00-150x120.jpg" align ="left"></a>近日，有大陆网民拍摄视频，披露山东省龙口市的排污管道深埋于入海口处偷排污水，污染状况令人震惊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 7:05 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758889.md#1" target="_blank">黑龙江男子病重仍遭非法拘留 9天后病亡</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758889.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/11-150x120.jpg" align ="left"></a>黑龙江佳木斯市林苑小镇法轮功学员杨胜军被非法拘留9天后，突然送医死亡，家属聘律师查真相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 6:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758753.md#1" target="_blank">【新闻看点】反渗透法剑指中共 看台湾民主路</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758753.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019-12-29.22-150x120.jpg" align ="left"></a>蔡英文表示，《反渗透法》主要是防范境外敌对势力，像中国（中共）政府对台湾民主政治运作及影响选举，如介入公民投票、总统大选、对政府机构游说等。有分析表示，台湾走上自由民主的道路，与美中两方的影响关系很大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 4:47 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757615.md#1" target="_blank">反对反渗透法 台统促党总裁：我就是中共同路人</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757615.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/019-08-132.06-150x120.jpg" align ="left"></a>台湾立法院31日审议“反渗透法”，数个党派与民间团体聚集在立法院外抗议。中华统一促进党总裁“白狼”张安乐表示，“我就是中共同路人”，因此不需要“反渗透法”；两岸若发生战争，他将赴前线和平协商，不达成绝不生还。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 3:13 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758705.md#1" target="_blank">华为：生存是2020第一要务 将淘汰10%主管</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758705.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/1103010952451164-150x120.jpg" align ="left"></a>2019最后一天，华为轮值董事长徐直军向员工和客户发表新年贺词。他在致辞中称，生存将是华为2020的第一要务，10%的主管面临淘汰。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 2:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758448.md#1" target="_blank">2019陆企违约逾1400亿 遍及28省 北京最多</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758448.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/04/1304262329491528-150x120.jpg" align ="left"></a>2019年最后一天，盘点全年大陆企业债务情况，业界称为“全面违约”，违约企业涉及众多行业，遍布20个省级行政区，北京最多，违约债券数量接近180只，违约金额超过1400亿元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 2:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758321.md#1" target="_blank">安全担忧 美陆军紧随海军禁用TikTok</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758321.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MG8YG-150x120.jpg" align ="left"></a>抖音国际版TikTok正在引起越来越多的安全隐患，在美国海军于半个前做出禁用该应用程序的相关规定后，美国陆军也迅速做出反应：禁止其士兵这个正在青少年中流行的短视频应用程序，以免带来安全问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 1:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757910.md#1" target="_blank">反渗透法过关 专家吁加细则阻中共染红媒体</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757910.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a19fd77f0b3860639eab978dbd778ea5-150x120.jpg" align ="left"></a>立法院31日经过5个小时的表决，最终三读通过反渗透法，政治大学国家发展研究所教授李酉潭说，反渗透法是盾不是矛，它是对抗中共渗透的最基础的防卫性法规，台湾未来还得针对中共对媒体的渗透、国防科技技术的窃取加以处理，“全球自由民主国家都在防止中共的扩张，台湾不能成为其中的漏洞。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 1:06 AM							</td></tr>
@@ -19,21 +34,6 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757756.md#1" target="_blank">防堵大陆肺炎疫情 台疾管署：持续落实检疫</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757756.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912310707102378-150x120.jpg" align ="left"></a>中华民国卫生福利部疾病管制署今天（12月31日）表示，因应中国武汉有不明原因肺炎疫情，持续落实边境检疫应变措施，加强入境旅客发烧筛检，且即日起针对从武汉直航入境班机进行登机检疫。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 8:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757425.md#1" target="_blank">中国银行：人民币将在6.75至7.35间震荡</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757425.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/ece9ce6653978d24b49f2322073548d8-150x120.jpg" align ="left"></a>中国银行日前发表了对明年人民币兑美元汇率的预测，该行认为，明年人民币汇率会随着贸易战的起伏而震荡，但不同于其它金融机构的预测，中国银行认为明年人民币汇率会在6.75至7.35人民币兑换1美元之间震荡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 7:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756631.md#1" target="_blank">传武汉爆发SARS疫情 7例病情危重</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756631.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IANTnpj-150x120.jpg" align ="left"></a>湖北武汉市最近公布一则紧急通告，称在当地的海鲜市场陆续出现“不明原因的肺炎”。微博上疯传，武汉疑似爆发非典型肺炎冠状病毒（SARS）群聚感染，已经有7宗感染病例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 6:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11755912.md#1" target="_blank">2019岁末 人权律师及异见人士遭密集抓捕</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11755912.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/page-3-150x120.jpg" align ="left"></a>自12月26日到31日，十余位包括维权律师、异见人士及部分家属遭到中共当局集中抓捕、抄家、询问，甚至失联。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 5:58 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756978.md#1" target="_blank">大陆近六千家P2P平台爆雷 波及270万投资者</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756978.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/P2P-platform-collapse-150x120.jpg" align ="left"></a>最新的数据显示，从高峰期至今年9月份，大陆有近6000家P2P平台爆发违约、负责人卷款潜逃或停止营运，涉及270万投资者。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 5:16 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757250.md#1" target="_blank">南水北调运行5年 中共为何拟建后续工程？</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757250.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1407040947282664-600x400-150x120.jpg" align ="left"></a>南水北调工程再次受到外界关注。中共官方日前高调发布了南水北调东、中线一期工程建成后的运行情况。不过，官方称，将展开南水北调的后续工程。那么，南水北调工程到底运行情况怎样？为什么还需后续工程？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 4:56 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757201.md#1" target="_blank">香港学者：武汉疫情严重性与SARS相当</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757201.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2004/03/403043505868-150x120.jpg" align ="left"></a>湖北武汉市在年终岁末传出疫情，爆7宗疑似SARS病例，再次引起中港两地对当地SARS疫情的恐慌。当前港铁每日有4班高铁列车班次来往香港及武汉。香港学者表示，疫情的严重性与当年SARS相当。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 4:42 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756845.md#1" target="_blank">《拍案惊奇》2020台湾大选两类观点引关注</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756845.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191231222-150x120.jpg" align ="left"></a>2020年1月11日，这么说太远了，就是从今天起再过12天，台湾就要举行大选。华人观众非常关注这场选举的结果，因为大家都觉得，这一次2020大选对台湾的未来命运极为重要。今天我们会简单介绍这场选举的概况，以及最近一次，也是唯一一次总统候选人辩论的要点。然后，作为我们节目几个月来一直关注的重点议题——香港，我们还会谈到一些最新情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 4:40 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757295.md#1" target="_blank">小粉红在台北101前唱中共国歌 露臀挑衅</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757295.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2005/05/5052339501465-150x120.jpg" align ="left"></a>三名疑似中国籍的男子日前在台北101大楼前以唱中共国歌和露臀等方式对参与竞选活动的台湾民众进行挑衅，而且涉嫌辱骂警察。当他们被警察盘查时，却又支吾其词，而且不敢出示自己的证件。对于这些小粉红的恶劣行径，网民纷纷大加挞伐。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 4:12 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756796.md#1" target="_blank">华为子公司高层大换血 接任者身份神秘</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756796.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1153137465-150x120.jpg" align ="left"></a>近日，大陆华为全资子公司高层再发生人事变动，接任董事长一职的田兴普身份神秘，孟晚舟则退出董事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 2:41 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757048.md#1" target="_blank">习近平将直播新年贺词 网民盼宣布中共解体</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757048.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/xi-150x120.jpg" align ="left"></a>在近几年兴起的网上直播节目中，直播主可以针对各种话题畅所欲言，或与粉丝即时互动，尺度比传统的电视节目大许多。不过，在审查制度盛行的大陆，直播还是受到很大的限制。针对中共官媒即将直播中国国家主席习近平发表的新年贺词，有网民问道，这会不会受到审查？也有人说，希望习近平大胆脱稿，宣布中共解体。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 2:22 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756450.md#1" target="_blank">外媒：企业债或成大陆明年最大灰犀牛</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756450.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1312310333481528-600x400-150x120.jpg" align ="left"></a>12月30日，BBC中文网发表了有关明年大陆灰犀牛的文章。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 1:43 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11747241.md#1" target="_blank">【2019盘点】A股上市公司十大丑闻</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11747241.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7fd102fa91e4776fb275d1eefdb908ee-600x400-150x120.jpg" align ="left"></a>回顾2019年，大陆股民“怒了”：从扇贝跑了、猪活活饿死、猪饿瘦了、300亿一夜蒸发、实控人被抓、到虚假年报……这一桩桩“奇事”背后，让所有投资者损失惨重、失望，同时也暴露出这些上市公司的财务危机及监管漏洞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 1:10 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756431.md#1" target="_blank">内蒙古三厅官被处分 通辽原政法委书记涉黑</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756431.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/xinjinshan-Web-Banner-1200x800-v3-150x120.jpg" align ="left"></a>中共内蒙古通辽市委前巡视员、原政法委书记辛金山，兴安盟行署前副盟长、公安局局长王永清，内蒙古监狱管理局党委原副书记、政委姜和平日前被处分。其中辛金山被指充当黑恶势力“保护伞”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 12:49 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756447.md#1" target="_blank">台湾大选 北京布线投票所盯场 定调报导方向</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756447.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1064637908-150x120.jpg" align ="left"></a>台湾2020年总统大选日一天天逼近，各方政党都加紧催票，中共也如投诚间谍“王立强”所披露的，透过“海陆空”三军全面攻击台湾选举，除了依惯例提供优惠补助金要求台商“回家投票”支持亲中派之外，更动员“染红”的基层地方派系乡里在投票日当天到投票所“盯场”、“催票”，并即时回报北京当局，以供定调舆论报导方向。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 11:27 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11757436.md#1" target="_blank">涉权钱色交易 内蒙古前常委云光中被逮捕</a><br></h3>12月31日，中共内蒙古自治区党委前常委、呼和浩特市委前书记云光中以涉嫌“受贿罪”被逮捕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 5:20 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754952.md#1" target="_blank">赖中强：反渗透法处罚拿中共钱介选的人</a><br></h3>民进党力拼反渗透法草案31日通过。多个公民团体30日到立法院前表达支持反渗透法，并呼吁立法应更严谨、周延。经济民主连合召集人赖中强指出，反渗透法处罚的是拿中共钱办事，介入台湾民主选举的人。如果只是到中国交流、参加活动，没拿中共的钱接受中共指令介入选举，完全不需要担心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 1:28 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756680.md#1" target="_blank">年末关门潮 山东等三省报刊明年起停刊</a><br></h3>山东省第一张都市生活类晨报《生活日报》，辽宁省《本溪晚报》，湖北省《武汉晨报》31日均刊登停刊通知。今年年末，已有多家媒体宣布停刊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 11:34 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756598.md#1" target="_blank">中国工程院院士李宁受审 贪污经费3756万</a><br></h3>12月30日，曾是大陆最年轻中国工程院院士的中国农业大学生物学院教授李宁及张磊贪污案在吉林松原开庭审理。李被指伙同他人贪污经费3756万元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 11:12 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759473.md#1" target="_blank">2020新年首日四川自贡现4.3级地震</a><br></h3>2020年新年首日，四川自贡发生4.3级地震，震源深度21千米。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 1:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/nsc413_4.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/nsc413_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_4.htm">http://www.epochtimes.com/gb/nsc413_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
