--- a/gb/ncid277_3.md
+++ b/gb/ncid277_3.md
@@ -25,7 +25,7 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11743793.md#1" target="_blank">【独家】大陆医生亲历不寻常器官移植手术（上）</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11743793.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/07/de728b88a79a29f47092b84533d848c7-150x120.jpg" align ="left"></a>“刚将前期准备做好，肝源就来了。一切好像就是安排得井然有序。”2011年的一个深夜，浙江大学附属医院的钟医生（化名）参加了一台肝移植手术，当晚以及“翻墙”后的所见所闻，令当时还是实习医生的他从此远离器官移植。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11750187.md#1" target="_blank">复旦等校改章程 美大学忧中共控制学术自由</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11750187.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/FuDanUni-1-150x120.jpg" align ="left"></a>美国大学正在密切关注中国大学修改章程一事，他们担心这是中共当局限制学术自由的开始，可能影响到他们在中国设置的十几个分支机构。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11749554.md#1" target="_blank">1月大选投给谁 台湾商界及年轻一代在权衡</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11749554.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ff5e11fb30c42496fc25a3236006c24f-1-600x400-1-150x120.jpg" align ="left"></a>1月的台湾总统大选被公认为台湾与中国大陆关系的一次公投，随着贸易战风险的加剧以及香港反送中局势升级，台湾各界都在重新评估他们要将大选选票投给谁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:16 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11750237.md#1" target="_blank">黑龙江厅官大肆敛财 八年送女儿两千万现金</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11750237.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/wu-wei1-150x120.jpg" align ="left"></a>近期，被视为冷门岗位的中共人防办系统腐败问题频发。陆媒日前披露黑龙江省人防办原党组书记、主任武伟敛财的部分细节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 5:43 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754482.md#1" target="_blank">湖南“操场埋尸案” 原校长黄炳松获刑15年</a><br></h3>12月30日，陆媒报导，湖南怀化新晃县“操场埋尸案”10名相关公职人员分别被以徇私枉法罪、渎职罪判处7年至15年不等的有期徒刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 5:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11752311.md#1" target="_blank">【翻墙必看】内蒙古公安警官开枪打死两官</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
 
 1.内蒙古公安警官枪杀两副局长 当局封口
