--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765329.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/pneumonia-010220-320x200.jpg">武汉“病毒性肺炎”病例暴增至44例</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763818.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/2020-1-1-1912241854579740-320x200.jpg">大陆民众得福报 敬祝李洪志大师新年好</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11750678.md#1">夏小强：台总统候选人政见会结束 大势已定</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
@@ -30,18 +30,18 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/16/n11725027.md#1">【内幕】中共如何将全球港口和商船变武器</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763818.md#1">大陆民众得福报 敬祝李洪志大师新年好</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764556.md#1">【翻墙必看】分析：川普击碎中共的拖延术</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765692.md#1">美空袭击毙伊朗军官 德英和以色列回应</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765534.md#1">【直播中】1.3香港教协集会 抗议白色恐怖</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765382.md#1">云南省委办公厅前主任张朝德被查</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765329.md#1">武汉“病毒性肺炎”病例暴增至44例</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765223.md#1">程晓容：党媒热捧李子柒 网红遇统战</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765382.md#1">云南省委办公厅前主任张朝德被查</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765134.md#1">【名家专栏】改善地球环境 无需社会主义政策</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764609.md#1">美空袭击毙伊朗将军 五角大楼：川普下令</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764609.md#1">川普为何下令击毙伊朗将军 五角大楼发声明</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765081.md#1">中国工程院院士李宁涉贪被判刑12年</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765048.md#1">蓬佩奥：伊朗将军被击毙 伊拉克人上街跳舞</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764759.md#1">涉权色交易私藏枪支 长沙银行前副行长被双开</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764607.md#1">“中国淡水鱼之王”长江白鲟宣告灭绝</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764633.md#1">放弃百万年薪 港精算师向旅客讲香港故事</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765144.md#1">2019大陆一线城市写字楼空置率创10年新高</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764905.md#1">新年第三天 哈尔滨一公交车辗压死一男子</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764722.md#1">传中共因政治因素停止沪伦通运作</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,166,124 人
+- 共 349,173,151 人
 ```
 </strong>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
