--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -32,7 +32,7 @@
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765692.md#1">美空袭击毙伊朗军官 德英和以色列回应</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764556.md#1">【翻墙必看】分析：川普击碎中共的拖延术</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765534.md#1">【直播中】1.3香港教协集会 抗议白色恐怖</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765534.md#1">【直播回放】1.3香港教协集会 抗议白色恐怖</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765329.md#1">武汉“病毒性肺炎”病例暴增至44例</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765223.md#1">程晓容：党媒热捧李子柒 网红遇统战</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765382.md#1">云南省委办公厅前主任张朝德被查</a><br>
